[package]
name = "ncog-encryption"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ed25519-dalek = { version = "1", features = ["serde"] }
x25519-dalek = "1"
curve25519-dalek = "1"
hpke = { version = "0.7", default-features = false, features = [
    "x25519",
    "std",
] }
chrono = "0.4"
thiserror = "1"
rand = "0.8"
rand-07 = { version = "0.7", package = "rand" }
sha2 = "0.9"
serde = { version = "1", features = ["derive"] }
pem = "1"
bincode = "1"
