[package]
name = "ncog"
version = "0.1.0"
edition = "2021"

[features]
acme = ["bonsaidb/server-acme"]

[dependencies]
bonsaidb = { git = "https://github.com/khonsulabs/bonsaidb.git", branch = "main", features = [
    "server",
    "server-websockets",
    "client",
    "cli",
] }
ncog-encryption = { path = "../ncog-encryption" }
time = { version = "0.3", features = ["std", "formatting", "serde"] }
serde = { version = "1", features = ["derive"] }
structopt = "0.3"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
async-trait = "0.1"
actionable = "0.1.0-dev.5"
crossterm = "0.22"
thiserror = "1"
rand = "0.8"
englishid = "0.3"

[dev-dependencies]
tempfile = "3"
