[package]
name = "ncog"
version = "0.1.0"
edition = "2021"

[features]
acme = ["bonsaidb/server-acme"]

[dependencies]
bonsaidb = { git = "https://github.com/khonsulabs/bonsaidb.git", branch = "main", features = [
    "server",
    "server-websockets",
    "server-hyper",
    "client",
    "cli",
] }
ncog-encryption = { path = "../ncog-encryption" }
time = { version = "0.3", features = ["std", "formatting", "serde"] }
serde = { version = "1", features = ["derive"] }
structopt = "0.3"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
async-trait = "0.1"
actionable = "0.1.0-dev.5"
crossterm = "0.22"
thiserror = "1"
rand = "0.8"
englishid = "0.3"
log = "0.4"
env_logger = "0.9"
axum = "0.3"
hyper = { version = "0.14", features = ["server", "http1"] }
tower = "0.4"
tower-http = { version = "0.1", features = ["set-header"] }

[dev-dependencies]
tempfile = "3"
