[package]
name = "ncog-webapp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
dominator = "0.5"
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
once_cell = "1"
futures-signals = "0.3"
bonsaidb = { git = "https://github.com/khonsulabs/bonsaidb.git", branch = "main", features = [
    "client",
    "client-websockets",
] }
